# otocyon

./: README.md  main.py  pyproject.toml  zensical.toml
docs/: engine.md  features.md  framework.md  index.md  instruments.md  libraries.md  python_techniques.md
scripts/: generate_data.py
src/otocyon/: cli.py  runner.py
src/otocyon/engine/: __init__.py  engine.py
src/otocyon/framework/: __init__.py  context.py  decorators.py  features.py  indicator.py  instrument.py  instrument_factory.py  loader.py  logger.py  market.py  portfolio.py  registry.py  schemas.py  signal.py
src/otocyon/framework/instruments/: crypto_instrument.py  equity_instrument.py  equity_insturment.py  swap_instrument.py
src/otocyon/framework/loaders/: DuckDbLoader.py  PolarsLoader.py
src/otocyon/strategies/: btc_eth_trend.py
tests/: conftest.py
tests/benchmark/: test_features.py
tests/framework/: context_test.py  decorators_test.py  instrument_test.py  loader_test.py  market_test.py  portfolio_test.py  registry_test.py  test_portfolio_properties.py  test_schemas.py
