[project]
name = "otocyon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "polars>=1.39.3",
    "ruamel-yaml>=0.19.1",
    "numpy",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
